--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 </div>
                 <div class="service-content">
                     <h3>Cinnamon Rolls</h3>
-                    <p>LEmbrace the warmth of freshly baked cinnamon rolls - a swirl of sweet cinnamon and soft dough that's pure comfort.</p>
+                    <p>Embrace the warmth of freshly baked cinnamon rolls - a swirl of sweet cinnamon and soft dough that's pure comfort.</p>
                 </div>
             </div>
             <div class="service-box">
@@ -305,7 +305,7 @@
             </div>
             <div class="footer-box">
                 <h3>Newsletter</h3>
-                <p>Stay updaet with our latests</p>
+                <p>Stay update with our latests</p>
                 <form>
                     <input type="email" name="email" placeholder="admin@gmail.com">
                     <button id="filler" type="submit"><i class="fa-solid fa-right-long"></i></button>
