--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             </div>
             <div class="footer-box">
                 <h3>Newsletter</h3>
-                <p>Stay update with our latests</p>
+                <p>Stay updated with our latests</p>
                 <form>
                     <input type="email" name="email" placeholder="admin@gmail.com">
                     <button id="filler" type="submit"><i class="fa-solid fa-right-long"></i></button>
@@ -318,7 +318,7 @@
                     <a href="https://github.com/ishanaudichya"><i class="fa-brands fa-facebook-f"></i></a>
                     <a href="https://github.com/ishanaudichya"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://github.com/ishanaudichya"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="https://github.com/ishanaudichya"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://github.com/ishanaudichya"><i class="fa-brands fa-github"></i></a>
 
                 </div>
 
