--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     <img src="img/pic-1.png" alt="">
                 </div>
                 <div class="team-content">
-                    <h3>Neha Singh</h3>
+                    <h3>Valentina Singh</h3>
                     <p>Owner | Baker</p>
                     <div class="social">
                         <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
